--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ code {
     monospace;
 }
 
+input:focus, textarea:focus, select:focus{
+  outline: none;
+}
+
 a {
   color:white;
   text-decoration: none;
