--- a/src/assets/stylesheets/GenreFilter.module.css
+++ b/src/assets/stylesheets/GenreFilter.module.css
@@ -1,15 +1,13 @@
 .select {
-    background-color: #CD363D;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  background-color: #cd363d;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-
 
 .input {
-    background-color: #CD363D;
-    font-size: 30px;
-    color: white;
-    border: none;
+  background-color: #cd363d;
+  font-size: 30px;
+  color: white;
+  border: none;
 }
-
