--- a/src/assets/stylesheets/MovieCard.module.css
+++ b/src/assets/stylesheets/MovieCard.module.css
@@ -1,30 +1,30 @@
 .card {
-    border-radius: 10px;
-    width: 500px;
-    margin:  25px auto;
-    padding: 8px;
+  border-radius: 10px;
+  width: 500px;
+  margin: 25px auto;
+  padding: 8px;
 }
 
 .title {
-    display: block;
-    border: 1px solid white;
-    background-color: transparent;
-    color: white;
-    text-align: center;
-    width: 100%;
-    padding: 10px;
-    font-size: 20px;
-    border-radius: 5px;
-    font-weight: bolder;
+  display: block;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 5px;
+  font-weight: bolder;
 }
 
 .genre {
-    display: block;
-    width: 100%;
-    background-color: #CD363D;
-    border: none;
-    padding: 5px;
-    color: white;
-    font-size: 20px;
-    border-radius: 5px;
+  display: block;
+  width: 100%;
+  background-color: #cd363d;
+  border: none;
+  padding: 5px;
+  color: white;
+  font-size: 20px;
+  border-radius: 5px;
 }
